--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -15,7 +15,7 @@
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Grid.Row="0">
             <Button Click="OpenWindow_Click">Добавить conn</Button>
-            <Button Click="OpenWindow_Click">Запустить скрипт</Button>
+            <Button Click="OpenWindow_Click">Выйти</Button>
         </StackPanel>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -23,7 +23,23 @@
                 <ColumnDefinition Width="0.02*"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
+            <ListView Grid.Column="0">
+                <ListView.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Открыть" Click="OpenQuery_Click"></MenuItem>
+                        <MenuItem Header="Закрыть" Click="CloseQuery_Click"></MenuItem>
+                    </ContextMenu>
+                </ListView.ContextMenu>
+            </ListView>
             <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch"></GridSplitter>
+            <ListView Grid.Column="2">
+                <ListView.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Открыть"></MenuItem>
+                        <MenuItem Header="Закрыть"></MenuItem>
+                    </ContextMenu>
+                </ListView.ContextMenu>
+            </ListView>
         </Grid>
         <GridSplitter Grid.Row="2" HorizontalAlignment="Stretch"></GridSplitter>
         <Grid Grid.Row="3">
