--- a/RegisterWindow.xaml
+++ b/RegisterWindow.xaml
@@ -1,25 +1,28 @@
-﻿<Window x:Class="QueryDeveloper_WPF.LoginWindow"
+﻿<Window x:Class="QueryDeveloper_WPF.RegisterWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QueryDeveloper_WPF"
         mc:Ignorable="d"
-        Title="LoginWindow" MinHeight="300" MinWidth="600" Height="300" Width="600" SizeChanged="Window_SizeChanged">
+        Title="RegisterWindow" MinHeight="400" MinWidth="600" Height="400" Width="600" SizeChanged="Window_SizeChanged">
     <DockPanel>
         <StackPanel DockPanel.Dock="Top" MinHeight="30px">
-            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center">WPF_Developer</TextBlock>
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="10">WPF_Developer</TextBlock>
         </StackPanel>
         <StackPanel DockPanel.Dock="Bottom" MinHeight="30px">
             <TextBlock HorizontalAlignment="Center" TextAlignment="Center">@TheLidren</TextBlock>
         </StackPanel>
-        <StackPanel Name="AdaptiveStackPanel" HorizontalAlignment="Center" VerticalAlignment="Center" DockPanel.Dock="Left">
+        <StackPanel Margin="40 10" Name="AdaptiveStackPanel" DockPanel.Dock="Left" HorizontalAlignment="Left">
+            <Label Content="Имя" Margin="0"></Label>
+            <TextBox Name="nameBox" MinHeight="25px" MinWidth="200px"></TextBox>
+            <Label Content="Фамилия" Margin="0"></Label>
+            <TextBox Name="surnameBox" MinHeight="25px" MinWidth="200px"></TextBox>
             <Label Content="Логин" Margin="0"></Label>
             <TextBox Name="loginBox" MinHeight="25px" MinWidth="200px"></TextBox>
             <Label Content="Пароль" Margin="0"></Label>
             <PasswordBox Name="passBox" MinHeight="25px"></PasswordBox>
-            <Button Content="Войти" Name="loginButton" HorizontalAlignment="Center" Padding="5" Margin="10" MinWidth="100px" Click="Login_Click"></Button>
-            <Button Content="Регистрация" Name="registerButton" HorizontalAlignment="Center" Padding="5" MinWidth="100px" Click="Register_Click"></Button>
+            <Button Content="Зарегестрироваться" Name="registerButton" HorizontalAlignment="Center" Margin="10" Padding="5" MinWidth="100px" Click="Register_Click"></Button>
         </StackPanel>
     </DockPanel>
 </Window>
