--- a/App.xaml
+++ b/App.xaml
@@ -2,8 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:QueryDeveloper_WPF"
-             StartupUri="LoginWindow.xaml">
+             StartupUri="Windows/MainWindow.xaml">
     <Application.Resources>
-         
+        <!--Windows/UserWindows/LoginWindow.xaml-->
     </Application.Resources>
 </Application>
