--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -9,10 +9,15 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="500" Width="900">
     <Window.Resources>
+        <command:OpenFormCommand x:Key="OpenFormCommand" />
+        <!--<viewmodel:OpenFormViewModel x:Key="LogoutKey" NewWindow="QueryDeveloper_WPF.LoginWindow" CloseOldWindow="True" />-->
+        <viewmodel:OpenFormViewModel x:Key="ConnWindowOpen" NewWindow="QueryDeveloper_WPF.ConnWindow" />
+        <viewmodel:OpenFormViewModel x:Key="SelectConnWindowOpen" NewWindow="QueryDeveloper_WPF.Windows.ConnWindows.SelectConnWindow" />
         <DataTemplate x:Key="ListViewItemContextMenu">
             <DataGrid  MinHeight="170">
                 <DataGrid.ContextMenu>
                     <ContextMenu>
+                        <!--<MenuItem Header="Открыть" Command="{StaticResource OpenFormCommand}" CommandParameter="{StaticResource SelectConnWindowOpen}"></MenuItem>-->
                         <MenuItem Header="Открыть" Click="OpenQuery_Click"></MenuItem>
                         <MenuItem Header="Закрыть" Click="CloseQuery_Click"></MenuItem>
                     </ContextMenu>
@@ -40,10 +45,6 @@
         <DataTemplate x:Key="FooterQuery">
             <TextBlock>Последнее время</TextBlock>
         </DataTemplate>
-        <command:OpenFormCommand x:Key="OpenFormCommand" />
-        <viewmodel:OpenFormViewModel x:Key="LogoutKey" NewWindow="QueryDeveloper_WPF.RegisterWindow" OldWindow="QueryDeveloper_WPF.MainWindow" CloseOldWindow="True" />
-        <viewmodel:OpenFormViewModel x:Key="ConnWindowOpen" NewWindow="QueryDeveloper_WPF.ConnWindow" OldWindow="QueryDeveloper_WPF.MainWindow" />
-        <viewmodel:OpenFormViewModel x:Key="UserWindowOpen" NewWindow="QueryDeveloper_WPF.UserWindow" OldWindow="QueryDeveloper_WPF.MainWindow" />
     </Window.Resources>
     <Grid ShowGridLines="True">
         <Grid.RowDefinitions>
@@ -57,9 +58,9 @@
         </Grid.ColumnDefinitions>
         <!--Панель управления-->
         <StackPanel Grid.Row="0" Grid.Column="0" Grid.RowSpan="3">
-            <Button Content="Пользователь" Padding="2"  Command="{StaticResource OpenFormCommand}" CommandParameter="{StaticResource UserWindowOpen}" Click="OpenUser_Click"></Button>
+            <Button Content="Пользователь" Padding="2" Click="OpenUser_Click"></Button>
             <Button Content="Строка подключения" Padding="2" Command="{StaticResource OpenFormCommand}" CommandParameter="{StaticResource ConnWindowOpen }"></Button>
-            <Button Content="Выйти" Padding="2" Command="{StaticResource OpenFormCommand}" CommandParameter="{StaticResource LogoutKey}"></Button>
+            <Button Content="Выйти" Name="LogOutButton" Padding="2" ></Button>
         </StackPanel>
         
         <Grid Grid.Row="0" Grid.Column="1" Grid.RowSpan="2">
